--- a/index.html
+++ b/index.html
@@ -9,5 +9,39 @@
   <title>Personal Portfolio</title>
 </head>
 <body>
+  <header>
+    <div class="header-background"></div>
+
+    <img class="header-image"
+         srcset="https://source.unsplash.com/random/200x400/?person 600w, 
+                 https://source.unsplash.com/random/620x870/?person 1000w, 
+                 https://source.unsplash.com/random/700x800/?person 1280w"
+         sizes="(max-width: 640px) 600px, (max-width: 1400px) 1000px, 1280px"
+         src="https://source.unsplash.com/random/600x700/?person" 
+         alt="" >
+
+    <h1 class="narrow-heading">Your name here</h1>
+
+    <div class="about-me-wrapper">
+      <h1 class="wide-heading">Your name here</h1>
+
+      <section class="about-me">
+        <h2>About me</h2>
+  
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+  
+        <div class="links">
+          <a href="#"><img src="media/github-mark-dark.svg" alt="Github invertocat logo" width="45px" height="45px"></a>
+          <a href="#"><img src="media/linkedin-dark.svg" alt="Linkedin logo" width="45px" height="45px"></a>
+          <a href="#"><img src="media/twitter-dark.svg" alt="Twitter logo" width="45px" height="45px"></a>
+        </div>
+      </section>
+    </div>
+  </header>
 </body>
 </html>
