--- a/index.html
+++ b/index.html
@@ -43,5 +43,106 @@
       </section>
     </div>
   </header>
+
+  <main>
+    <h2>My work</h2>
+    <div class="projects-container">
+      <article class="project">
+        <img src="media/project-placeholder.png" alt="">
+
+        <div class="project-heading">
+          <h3>Project name</h3>
+          <div>
+            <a href="#"><img src="media/github-mark-dark.svg" alt="Github invertocat logo" width="30px" height="30px"></a>
+            <a href="#"><img src="media/open-in-new.svg" alt="" width="30px" height="30px"></a>
+          </div>
+        </div>
+
+        <div class="project-description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </div>
+      </article>
+
+      <article class="project">
+        <img src="media/project-placeholder.png" alt="">
+
+        <div class="project-heading">
+          <h3>Project name</h3>
+          <div>
+            <a href="#"><img src="media/github-mark-dark.svg" alt="Github invertocat logo" width="30px" height="30px"></a>
+            <a href="#"><img src="media/open-in-new.svg" alt="" width="30px" height="30px"></a>
+          </div>
+        </div>
+
+        <div class="project-description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </div>
+      </article>
+
+      <article class="project">
+        <img src="media/project-placeholder.png" alt="">
+
+        <div class="project-heading">
+          <h3>Project name</h3>
+          <div>
+            <a href="#"><img src="media/github-mark-dark.svg" alt="Github invertocat logo" width="30px" height="30px"></a>
+            <a href="#"><img src="media/open-in-new.svg" alt="" width="30px" height="30px"></a>
+          </div>
+        </div>
+
+        <div class="project-description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </div>
+      </article>
+
+      <article class="project">
+        <img src="media/project-placeholder.png" alt="">
+
+        <div class="project-heading">
+          <h3>Project name</h3>
+          <div>
+            <a href="#"><img src="media/github-mark-dark.svg" alt="Github invertocat logo" width="30px" height="30px"></a>
+            <a href="#"><img src="media/open-in-new.svg" alt="" width="30px" height="30px"></a>
+          </div>
+        </div>
+
+        <div class="project-description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </div>
+      </article>
+
+      <article class="project">
+        <img src="media/project-placeholder.png" alt="">
+
+        <div class="project-heading">
+          <h3>Project name</h3>
+          <div>
+            <a href="#"><img src="media/github-mark-dark.svg" alt="Github invertocat logo" width="30px" height="30px"></a>
+            <a href="#"><img src="media/open-in-new.svg" alt="" width="30px" height="30px"></a>
+          </div>
+        </div>
+
+        <div class="project-description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </div>
+      </article>
+
+      <article class="project">
+        <img src="media/project-placeholder.png" alt="">
+
+        <div class="project-heading">
+          <h3>Project name</h3>
+          <div>
+            <a href="#"><img src="media/github-mark-dark.svg" alt="Github invertocat logo" width="30px" height="30px"></a>
+            <a href="#"><img src="media/open-in-new.svg" alt="" width="30px" height="30px"></a>
+          </div>
+        </div>
+
+        <div class="project-description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </div>
+      </article>
+    </div>
+  </main>
 </body>
 </html>
