--- a/index.html
+++ b/index.html
@@ -144,5 +144,37 @@
       </article>
     </div>
   </main>
+
+  <footer>
+    <section class="contact-details">
+      <h2>Contact me</h2>
+
+      <p>Please contact me if you have any questions</p>
+  
+      <section class="phone">
+        <img src="media/phone-outline.svg" alt="Phone icon" width="30px" height="30px">
+        <span>444-444-4444</span>
+      </section>
+  
+      <section class="email">
+        <img src="media/email-outline.svg" alt="Email icon" width="30px" height="30px">
+        <span>example@email.com</span>
+      </section>
+  
+      <section class="links">
+        <a href="#"><img src="media/github-mark.svg" alt="Github invertocat logo" width="40px" height="40px"></a>
+        <a href="#"><img src="media/twitter.svg" alt="Twitter logo" width="40px" height="40px"></a>
+        <a href="#"><img src="media/linkedin.svg" alt="Linkedin logo" width="40px" height="40px"></a>
+      </section>
+    </section>
+
+    <div class="footer-image">
+      <img
+       srcset="https://source.unsplash.com/random/960x540/?programming 800w, https://source.unsplash.com/random/1280x720/?programming 1000w"
+       sizes="(max-width: 800px) 800px, 1000px"
+       src="https://source.unsplash.com/random/1280x720/?programming" 
+       alt="">
+    </div>
+  </footer>
 </body>
 </html>
