Remove unnecessary px values

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     </p>
 
     <div class="social-links">
-      <a href="https://github.com/norkitorki"><img src="images/misc/github-mark.svg" alt="My github repository" width="60px" height="60px" title="Github"></a>
-      <a href="#"><img src="images/misc/linkedin-blue.png" alt="Linkedin" width="60px" height="60px" title="Linkedin"></a>
-      <a href="#"><img src="images/misc/twitter-blue.svg" alt="Twitter" width="60px" height="60px" title="Twitter"></a>
+      <a href="https://github.com/norkitorki"><img src="images/misc/github-mark.svg" alt="My github repository" width="60" height="60" title="Github"></a>
+      <a href="#"><img src="images/misc/linkedin-blue.png" alt="Linkedin" width="60" height="60" title="Linkedin"></a>
+      <a href="#"><img src="images/misc/twitter-blue.svg" alt="Twitter" width="60" height="60" title="Twitter"></a>
     </div>
   </header>
 
@@ -47,7 +47,7 @@
         <section class="project-image-container">
           <div class="project-image-links">
             <a href="https://github.com/norkitorki/odin-project-flight-booker">
-              <img src="images/misc/github-mark.svg" alt="View flight booker source code on github" width="50px" height="50px" title="View source code">
+              <img src="images/misc/github-mark.svg" alt="View flight booker source code on github" width="50" height="50" title="View source code">
             </a>
           </div>
 
@@ -60,10 +60,10 @@
           <span class="aria-programming-languages">languages used: Ruby on Rails, HTML5, CSS, Javascript</span>
 
           <div class="programming-languages" aria-hidden="true">
-            <img src="images/languages/rails.png" alt="Ruby on Rails" width="25px" height="25px" title="Ruby on Rails">
-            <img src="images/languages/html5-light.png" alt="HTML5" width="25px" height="25px" title="HTML5">
-            <img src="images/languages/css.png" alt="CSS" width="25px" height="25px" title="CSS">
-            <img src="images/languages/javascript.png" alt="Javascript" width="25px" height="25px" title="JavaScript">
+            <img src="images/languages/rails.png" alt="Ruby on Rails" width="25" height="25" title="Ruby on Rails">
+            <img src="images/languages/html5-light.png" alt="HTML5" width="25" height="25" title="HTML5">
+            <img src="images/languages/css.png" alt="CSS" width="25" height="25" title="CSS">
+            <img src="images/languages/javascript.png" alt="Javascript" width="25" height="25" title="JavaScript">
           </div>
 
           <p class="centered">
@@ -76,7 +76,7 @@
         <section class="project-image-container">
           <div class="project-image-links">
             <a href="https://github.com/norkitorki/odin-project-flickr-api">
-              <img src="images/misc/github-mark.svg" alt="View flickr api source code on github" width="50px" height="50px" title="View source code">
+              <img src="images/misc/github-mark.svg" alt="View flickr api source code on github" width="50" height="50" title="View source code">
             </a>
           </div>
 
@@ -89,9 +89,9 @@
           <span class="aria-programming-languages">Languages used: Ruby on Rails, HTML5, CSS</span>
 
           <div class="programming-languages" aria-hidden="true">
-            <img src="images/languages/rails.png" alt="Ruby on Rails logo" width="25px" height="25px" title="Ruby on Rails">
-            <img src="images/languages/html5-light.png" alt="HTML5 logo" width="25px" height="25px" title="HTML5">
-            <img src="images/languages/css.png" alt="CSS logo" width="25px" height="25px" title="CSS">
+            <img src="images/languages/rails.png" alt="Ruby on Rails logo" width="25" height="25" title="Ruby on Rails">
+            <img src="images/languages/html5-light.png" alt="HTML5 logo" width="25" height="25" title="HTML5">
+            <img src="images/languages/css.png" alt="CSS logo" width="25" height="25" title="CSS">
           </div>
 
           <p class="centered">
@@ -104,7 +104,7 @@
         <section class="project-image-container">
           <div class="project-image-links">
             <a href="https://github.com/norkitorki/odin-project-private-events">
-              <img src="images/misc/github-mark.svg" alt="View private events source code on github" width="50px" height="50px" title="View source code">
+              <img src="images/misc/github-mark.svg" alt="View private events source code on github" width="50" height="50" title="View source code">
             </a>
           </div>
 
@@ -117,9 +117,9 @@
           <span class="aria-programming-languages">Languages used: Ruby on Rails, HTML5, CSS</span>
 
           <div class="programming-languages" aria-hidden="true">
-            <img src="images/languages/rails.png" alt="Ruby on Rails logo" width="25px" height="25px" title="Ruby on Rails">
-            <img src="images/languages/html5-light.png" alt="HTML5 logo" width="25px" height="25px" title="HTML5">
-            <img src="images/languages/css.png" alt="CSS logo" width="25px" height="25px" title="CSS">
+            <img src="images/languages/rails.png" alt="Ruby on Rails logo" width="25" height="25" title="Ruby on Rails">
+            <img src="images/languages/html5-light.png" alt="HTML5 logo" width="25" height="25" title="HTML5">
+            <img src="images/languages/css.png" alt="CSS logo" width="25" height="25" title="CSS">
           </div>
 
           <p class="centered">
@@ -132,7 +132,7 @@
         <section class="project-image-container">
           <div class="project-image-links">
             <a href="https://github.com/norkitorki/odin-project-members-only">
-              <img src="images/misc/github-mark.svg" alt="View members only source code on github" width="50px" height="50px" title="View source code">
+              <img src="images/misc/github-mark.svg" alt="View members only source code on github" width="50" height="50" title="View source code">
             </a>
           </div>
 
@@ -145,9 +145,9 @@
           <span class="aria-programming-languages">Languages used: Ruby on Rails, HTML5, CSS</span>
 
           <div class="programming-languages" aria-hidden="true">
-            <img src="images/languages/rails.png" alt="Ruby on Rails logo" width="25px" height="25px" title="Ruby on Rails">
-            <img src="images/languages/html5-light.png" alt="HTML5 logo" width="25px" height="25px" title="HTML5">
-            <img src="images/languages/css.png" alt="CSS logo" width="25px" height="25px" title="CSS">
+            <img src="images/languages/rails.png" alt="Ruby on Rails logo" width="25" height="25" title="Ruby on Rails">
+            <img src="images/languages/html5-light.png" alt="HTML5 logo" width="25" height="25" title="HTML5">
+            <img src="images/languages/css.png" alt="CSS logo" width="25" height="25" title="CSS">
           </div>
 
           <p class="centered">
@@ -160,7 +160,7 @@
         <section class="project-image-container">
           <div class="project-image-links">
             <a href="https://github.com/norkitorki/odin-project-micro-reddit">
-              <img src="images/misc/github-mark.svg" alt="View micro reddit source code on github" width="50px" height="50px" title="View source code">
+              <img src="images/misc/github-mark.svg" alt="View micro reddit source code on github" width="50" height="50" title="View source code">
             </a>
           </div>
 
@@ -173,9 +173,9 @@
           <span class="aria-programming-languages">Languages used: Ruby on Rails, HTML5, CSS</span>
 
           <div class="programming-languages" aria-hidden="true">
-            <img src="images/languages/rails.png" alt="Ruby on Rails logo" width="25px" height="25px" title="Ruby on Rails">
-            <img src="images/languages/html5-light.png" alt="HTML5 logo" width="25px" height="25px" title="HTML5">
-            <img src="images/languages/css.png" alt="CSS logo" width="25px" height="25px" title="CSS">
+            <img src="images/languages/rails.png" alt="Ruby on Rails logo" width="25" height="25" title="Ruby on Rails">
+            <img src="images/languages/html5-light.png" alt="HTML5 logo" width="25" height="25" title="HTML5">
+            <img src="images/languages/css.png" alt="CSS logo" width="25" height="25" title="CSS">
           </div>
 
           <p class="centered">
@@ -188,10 +188,10 @@
         <section class="project-image-container">
           <div class="project-image-links">
             <a href="https://github.com/norkitorki/odin-project-mastermind">
-              <img src="images/misc/github-mark.svg" alt="View mastermind source code on github" width="50px" height="50px" title="View source code">
+              <img src="images/misc/github-mark.svg" alt="View mastermind source code on github" width="50" height="50" title="View source code">
             </a>
             <a href="https://replit.com/@norkitorki/odin-project-mastermind">
-              <img src="images/misc/open-in-new-light.svg" alt="Open mastermind in browser" width="50px" height="50px" title="Open in browser">
+              <img src="images/misc/open-in-new-light.svg" alt="Open mastermind in browser" width="50" height="50" title="Open in browser">
             </a>
           </div>
 
@@ -204,7 +204,7 @@
           <span class="aria-programming-languages">Languages used: Ruby</span>
 
           <div class="programming-languages" aria-hidden="true">
-            <img src="images/languages/ruby.png" alt="Ruby logo" width="25px" height="25px" title="Ruby">
+            <img src="images/languages/ruby.png" alt="Ruby logo" width="25" height="25" title="Ruby">
 
           </div>
 
@@ -218,10 +218,10 @@
         <section class="project-image-container">
           <div class="project-image-links">
             <a href="https://github.com/norkitorki/odin-project-ruby-final-project">
-              <img src="images/misc/github-mark.svg" alt="View ruby chess source code on github" width="50px" height="50px" title="View source code">
+              <img src="images/misc/github-mark.svg" alt="View ruby chess source code on github" width="50" height="50" title="View source code">
             </a>
             <a href="https://replit.com/@norkitorki/odin-project-ruby-final-project">
-              <img src="images/misc/open-in-new-light.svg" alt="Open ruby chess in browser" width="50px" height="50px" title="Open in browser">
+              <img src="images/misc/open-in-new-light.svg" alt="Open ruby chess in browser" width="50" height="50" title="Open in browser">
             </a>
           </div>
 
@@ -234,7 +234,7 @@
           <span class="aria-programming-languages">Languages used: Ruby</span>
 
           <div class="programming-languages" aria-hidden="true">
-            <img src="images/languages/ruby.png" alt="Ruby logo" width="25px" height="25px" title="Ruby">
+            <img src="images/languages/ruby.png" alt="Ruby logo" width="25" height="25" title="Ruby">
 
           </div>
 
@@ -248,10 +248,10 @@
         <section class="project-image-container">
           <div class="project-image-links">
             <a href="https://github.com/norkitorki/odin-project-ruby-final-project">
-              <img src="images/misc/github-mark.svg" alt="View knight travails source code on github" width="50px" height="50px" title="View source code">
+              <img src="images/misc/github-mark.svg" alt="View knight travails source code on github" width="50" height="50" title="View source code">
             </a>
             <a href="https://replit.com/@norkitorki/odin-project-ruby-final-project">
-              <img src="images/misc/open-in-new-light.svg" alt="Open knight travails in browser" width="50px" height="50px" title="Open in browser">
+              <img src="images/misc/open-in-new-light.svg" alt="Open knight travails in browser" width="50" height="50" title="Open in browser">
             </a>
           </div>
 
@@ -264,7 +264,7 @@
           <span class="aria-programming-languages">Languages used: Ruby</span>
 
           <div class="programming-languages" aria-hidden="true">
-            <img src="images/languages/ruby.png" alt="Ruby logo" width="25px" height="25px" title="Ruby">
+            <img src="images/languages/ruby.png" alt="Ruby logo" width="25" height="25" title="Ruby">
 
           </div>
 
@@ -278,10 +278,10 @@
         <section class="project-image-container">
           <div class="project-image-links">
             <a href="https://github.com/norkitorki/Pomodoro-Clock-Project">
-              <img src="images/misc/github-mark.svg" alt="View pomodoro clock source code on github" width="50px" height="50px" title="View source code">
+              <img src="images/misc/github-mark.svg" alt="View pomodoro clock source code on github" width="50" height="50" title="View source code">
             </a>
             <a href="https://norkitorki.github.io/Pomodoro-Clock-Project/">
-              <img src="images/misc/open-in-new-light.svg" alt="Open pomodoro clock in browser" width="50px" height="50px" title="Open in browser">
+              <img src="images/misc/open-in-new-light.svg" alt="Open pomodoro clock in browser" width="50" height="50" title="Open in browser">
             </a>
           </div>
 
@@ -294,9 +294,9 @@
           <span class="aria-programming-languages">languages used: HTML5, CSS, Javascript</span>
 
           <div class="programming-languages" aria-hidden="true">
-            <img src="images/languages/html5-light.png" alt="HTML logo" width="25px" height="25px" title="HTML5">
-            <img src="images/languages/css.png" alt="CSS logo" width="25px" height="25px" title="CSS">
-            <img src="images/languages/javascript.png" alt="Javascript logo" width="25px" height="25px" title="JavaScript">
+            <img src="images/languages/html5-light.png" alt="HTML logo" width="25" height="25" title="HTML5">
+            <img src="images/languages/css.png" alt="CSS logo" width="25" height="25" title="CSS">
+            <img src="images/languages/javascript.png" alt="Javascript logo" width="25" height="25" title="JavaScript">
           </div>
 
           <p class="centered">
@@ -309,10 +309,10 @@
         <section class="project-image-container">
           <div class="project-image-links">
             <a href="https://github.com/norkitorki/odin-project-calculator">
-              <img src="images/misc/github-mark.svg" alt="View calculator source code on github" width="50px" height="50px" title="View source code">
+              <img src="images/misc/github-mark.svg" alt="View calculator source code on github" width="50" height="50" title="View source code">
             </a>
             <a href="https://norkitorki.github.io/odin-project-calculator/">
-              <img src="images/misc/open-in-new-light.svg" alt="Open calculator in browser" width="50px" height="50px" title="Open in browser">
+              <img src="images/misc/open-in-new-light.svg" alt="Open calculator in browser" width="50" height="50" title="Open in browser">
             </a>
           </div>
 
@@ -325,9 +325,9 @@
           <span class="aria-programming-languages">languages used: HTML5, CSS, Javascript</span>
 
           <div class="programming-languages" aria-hidden="true">
-            <img src="images/languages/html5-light.png" alt="HTML logo" width="25px" height="25px" title="HTML5">
-            <img src="images/languages/css.png" alt="CSS logo" width="25px" height="25px" title="CSS">
-            <img src="images/languages/javascript.png" alt="Javascript logo" width="25px" height="25px" title="JavaScript">
+            <img src="images/languages/html5-light.png" alt="HTML logo" width="25" height="25" title="HTML5">
+            <img src="images/languages/css.png" alt="CSS logo" width="25" height="25" title="CSS">
+            <img src="images/languages/javascript.png" alt="Javascript logo" width="25" height="25" title="JavaScript">
           </div>
 
           <p class="centered">
@@ -340,10 +340,10 @@
         <section class="project-image-container">
           <div class="project-image-links">
             <a href="https://github.com/norkitorki/odin-project-etch-a-sketch">
-              <img src="images/misc/github-mark.svg" alt="View etch-a-sketch source code on github" width="50px" height="50px" title="View source code">
+              <img src="images/misc/github-mark.svg" alt="View etch-a-sketch source code on github" width="50" height="50" title="View source code">
             </a>
             <a href="https://norkitorki.github.io/odin-project-etch-a-sketch/">
-              <img src="images/misc/open-in-new-light.svg" alt="Open etch-a-sketch in browser" width="50px" height="50px" title="Open in browser">
+              <img src="images/misc/open-in-new-light.svg" alt="Open etch-a-sketch in browser" width="50" height="50" title="Open in browser">
             </a>
           </div>
 
@@ -356,9 +356,9 @@
           <span class="aria-programming-languages">languages used: HTML5, CSS, Javascript</span>
 
           <div class="programming-languages" aria-hidden="true">
-            <img src="images/languages/html5-light.png" alt="HTML logo" width="25px" height="25px" title="HTML5">
-            <img src="images/languages/css.png" alt="CSS logo" width="25px" height="25px" title="CSS">
-            <img src="images/languages/javascript.png" alt="Javascript logo" width="25px" height="25px" title="JavaScript">
+            <img src="images/languages/html5-light.png" alt="HTML logo" width="25" height="25" title="HTML5">
+            <img src="images/languages/css.png" alt="CSS logo" width="25" height="25" title="CSS">
+            <img src="images/languages/javascript.png" alt="Javascript logo" width="25" height="25" title="JavaScript">
           </div>
 
           <p class="centered">
@@ -374,18 +374,18 @@
 
     <section class="contacts">
       <div class="contact-details">
-        <img src="images/misc/map-marker.svg" alt="location" width="40px" height="40px">
+        <img src="images/misc/map-marker.svg" alt="location" width="40" height="40">
         <span class="bold">Earth</span>
       </div>
 
       <div class="contact-details">
-        <img src="images/misc/email-outline-cyan.svg" alt="email address" width="40px" height="40px">
+        <img src="images/misc/email-outline-cyan.svg" alt="email address" width="40" height="40">
         <span class="bold">mail@example.com</span>
         <a href="mailto:mail@example.com" class="bold">Send Email</a>
       </div>
 
       <div class="contact-details">
-        <img src="images/misc/phone-outline-green.svg" alt="phone number" width="40px" height="40px">
+        <img src="images/misc/phone-outline-green.svg" alt="phone number" width="40" height="40">
         <span class="bold">not available</span>
       </div>
     </section>
